Throw CLI error message if incorrect password is provided

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,7 +49,7 @@ dependencies = [
 ]
 
 [project.scripts]
-odfdecrypt = "odfdecrypt.cli:main"
+odfdecrypt = "odfdecrypt.cli:cli"
 
 [project.urls]
 Homepage = "https://github.com/toobee/odf-decrypt"
