--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -92,7 +92,7 @@ jobs:
 
   publish-pypi:
     name: Publish to PyPI
-    needs: [build, test]
+    needs: [publish-testpypi]
     runs-on: ubuntu-latest
     # Only run on release publication or manual dispatch with explicit PyPI flag
     if: github.event_name == 'release' || (github.event_name == 'workflow_dispatch' && github.event.inputs.publish_pypi == 'true')
